--- a/gallery.html
+++ b/gallery.html
@@ -16,12 +16,12 @@
         </nav>
     </header>
     <main class="gallery">
-        <img src="images/img1.jpg" alt="Artwork 1">
-        <img src="images/img2.jpg" alt="Event">
-        <img src="images/img3.jpg" alt="Studio">
-        <img src="images/img4.jpg" alt="ArtBeat">
-        <img src="images/img5.jpg" alt="Exhibition">
-        <img src="images/img6.jpg" alt="Teaching">
+        <img src="img1.jpg" alt="Artwork 1">
+        <img src="img2.jpg" alt="Event">
+        <img src="img3.jpg" alt="Studio">
+        <img src="img4.jpg" alt="ArtBeat">
+        <img src="img5.jpg" alt="Exhibition">
+        <img src="img6.jpg" alt="Teaching">
     </main>
 </body>
 </html>
