--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <img src="images/profile.jpg" alt="Ashis Roy" class="main-img">
+        <img src="profile.jpg" alt="Ashis Roy" class="main-img">
         <p>Welcome to a special tribute website dedicated to our beloved drawing teacher. 💐</p>
     </main>
 </body>
